# midi_ump_bridge_cpp

./: .gitignore  CMakeLists.txt  readme.md
src/: converter.cpp  converter.h  gui.cpp  gui.h  main.cpp  ump.h
